# mlops-playground

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
authentication/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
cluster/: Makefile  install.sh  run-cluster.sh
demo-operator/: Dockerfile  go.mod
feature-store/: .dockerignore  .gitignore  Makefile  README.md  api-entrypoint.sh  api.Dockerfile  app-entrypoint.sh  app.Dockerfile  docker-compose.yaml  pyproject.toml
feature-store/app/: main.py  settings.py  urls.py
feature-store/app/quotes/: apps.py
feature-store/app/reporting/: apps.py  forms.py  models.py  urls.py  views.py
feature-store/app/reporting/migrations/: 0001_initial.py
feature-store/app/simpleapi/: apps.py  models.py  routers.py
feature-store/app/simpleapi/migrations/: 0001_initial.py
feature-store/app/ui/reporting/: clinical_data_form.html  patient_confirm_delete.html  patient_form.html  patient_list.html
feature-store/tests/: conftest.py
feature-store/tests/features/: reporting.feature
feature-store/tests/reporting/: test_reporting.py
mlflow/: docker-compose.yaml  init.sql  mlflow.Dockerfile  postgres.Dockerfile  requirements.txt  run.sh
notebooks/: back_testing_part1.ipynb  back_testing_part2.ipynb  capm.ipynb  compare_stocks_using_mean_variance_analysis.ipynb  compare_stocks_with_downside_deviation.ipynb  ets_decomposition.ipynb  explore_backtrader.ipynb  exponential_distribution.ipynb  market_analysis.ipynb  maximum_drawdown_analysis.ipynb  mean_variance_analysis.ipynb  normal_distribution.ipynb  pdf.ipynb  serving_input_payload.json  test-mlflow.ipynb  (+1 more)
platform/: Makefile
(+41 files in other folders)
