[tool.poetry]
name = "feature-store-poc"
version = "0.1.0"
description = "feature store poc"
authors = ["liusha he"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
yfinance = "^0.2.32"
dash = "^2.14.2"
opentelemetry-instrumentation-fastapi = "^0.39b0"
opentelemetry-sdk = "^1.18.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.18.0"
opentelemetry-instrumentation-grpc = "^0.39b0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
mkdocs = "^1.5.3"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.1"
pytest-bdd = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
